--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Find you train and here in the below trains 
+  h1 Hi  here in the below trains 
   p Select your train and please check the schedule
   #wrapper
     #trainList
