--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,5 @@
 extends layout
 
 block content
-  h1 Chicago Metro Station App
-  p Select your train and please check the schedule
-  #wrapper
-    #trainList
-      h2 Trains 
-      #trains.d-flex.flex-row
-    #trainInfo
-      strong  <span id='trainName'></span>
+  h1 Demo App
+  p Here the below are train and please check the schedule
