changed the index file

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1 Demo Application
-  p Here the below are train and please check the schedule
+  p  Here is the demo application
